update test cases

--- a/test/examples/case6.html
+++ b/test/examples/case6.html
@@ -1,20 +1,23 @@
 <div>
     <div my-attr="foo">
-        node
+        node1
     </div>
     <div my-attr="bar">
-        node
+        node2
     </div>
     <div my-attr="baz">
-        node
+        node3
+    </div>
+    <div>
+        node4
     </div>
 </div>
 <div my-attr="foo">
-    node
+    node5
 </div>
 <div my-attr="bar">
-    node
+    node6
 </div>
 <div my-attr="baz">
-    node
+    node7
 </div>
