--- a/test/expected/case6.html
+++ b/test/expected/case6.html
@@ -1,12 +1,15 @@
 <div>
     <div my-attr="foo">
-        node
+        node1
     </div>
     
     
+    <div>
+        node4
+    </div>
 </div>
 <div my-attr="foo">
-    node
+    node5
 </div>
 
 
